Updating background processor
